# react-native-basis-universal

./: .gitignore  .gitmodules  BUILD  BUILD.bazel  CONTRIBUTING.md  README.md  module.bazel  package.json  react-native-basis-universal.podspec  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/basisuniversal/: BasisUniversalModule.kt  BasisUniversalPackage.kt
cpp/: BasisFile.cpp  BasisFile.h  KTX2File.cpp  KTX2File.h  react-native-basis-universal.cpp  react-native-basis-universal.h
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/ios/Resources/: resources.podspec
example/patches/: react-native-blob-jsi-helper+0.3.1.patch
example/src/: App.tsx
ios/: BasisUniversal.h  BasisUniversal.mm
ios/libs/rn_basis_universal.xcframework/: Info.plist
ios/libs/rn_basis_universal.xcframework/ios-arm64_x86_64-simulator/rn_basis_universal.framework/Modules/: module.modulemap
scripts/: build.ts
src/: Basis.ts  BasisEncoder.ts  BasisFile.ts  KTX2File.ts  NativeBasisUniversal.ts  index.ts  index.tsx
