module(
    name = "react_native_basis_universal",
    compatibility_level = 1,
)

# Basic
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

# Rules
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "rules_apple", version = "3.9.2")

# Third party
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "basis_universal",
    type = "tar.gz",
    integrity = "sha256-DvNEzH4zc8qcFd4r2AUS6k6hfgntiV/r355w9seJvCc=",
    build_file = "//third_party/basis_universal:BUILD.basis_universal.bazel",
    strip_prefix = "basis_universal-1_50_0_2",
    urls = [
        "https://github.com/BinomialLLC/basis_universal/archive/refs/tags/v1_50_0_2.tar.gz"
    ]
)
